feat: enforce auth on all routes of /users and /projects, remove functions to compare user id in extracted token
